--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@plasmicpkgs/antd5": "^0.0.210",
     "@plasmicpkgs/plasmic-basic-components": "^0.0.207",
     "@plasmicpkgs/plasmic-rich-components": "^1.0.175",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/supabase-js": "^2.39.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
